# mlnotify

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  netlify.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: bump-version.yml  release.yml  sdk-release.yml  sdk-test.yml  tests.yml
.netlify/functions-serve/notify/: notify.js
.netlify/functions-serve/register-client/: register-client.js
sdk/: .env  .flake8  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
sdk/scripts/: run_precommit_hook.py  run_script.py
sdk/src/mlnotify/: __init__.py  hooks.py  jupyter_magic.py  logger.py  mlnotify.py  plugin_manager.py  plugins_manager.py
sdk/src/mlnotify/plugins/: base.py  notify.py
sdk/tests/: conftest.py  test_catboost.py  test_keras.py  test_lightgbm.py  test_manual.py  test_plugins_manager.py  test_sklearn.py  test_xgboost.py  utils.py
sdk/tests/data/: xgboost.txt
src/mlnotify/: __init__.py  hooks.py  logger.py
src/mlnotify/plugins/: notify.py
tests/: test_keras.py  test_lightgbm.py  test_xgboost.py
tests/data/: keras.csv
website/: .babelrc  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  README.md  gridsome.config.js  gridsome.server.js  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.functions.js
website/netlify/functions/: can-i-use.ts  get-training-info.ts  notify.ts  register-client.ts  statistics.ts  subscribe-to-training-email.ts  subscribe-to-training-notification.ts  subscribe-to-training.ts  training-end.ts  training-start.ts
website/netlify/utils/: can-i-use-test.ts  email.ts  firebase.ts  types.ts
website/netlify/utils/emails/: training-end.ts
website/scripts/: appendToServiceWorker.js
website/src/: App.vue  main.js  main.ts  notify-service-worker.js  shims-assets.d.ts  store.ts  sw.js  vue-shims.d.ts
website/src/components/: AppFooter.vue  AppHeader.vue  ChangingText.vue  CircleCounter.vue  CodeBlock.vue  Count.vue  DesktopNotificationDialog.vue  EnterCodeSection.vue  Footer.vue  MobileNotificationDialog.vue  NotificationDialog.vue  PinCodeInput.vue  SuccessConfetti.vue  UsageInstructionsSection.vue
website/src/layouts/: Default.vue
website/src/pages/: 404.vue  Index.vue
website/src/pages/training/: [trainingId].vue  _trainingId.vue
website/src/services/: api.js  api.ts  firebase.js  firebase.ts  notification.js  notification.ts
website/src/services/firebase/: messaging.js
website/src/styles/: _font.scss  _reset.scss  _transitions.scss  index.scss
website/src/types/: ClientApiConstructor.ts  ClientContext.ts  Statistics.ts  index.ts
website/static/: sw.js
