[tool.poetry]
name = "mlnotify"
version = "1.0.0"
description = "ML Notify - A little tool to help you know when your model finished training"
authors = []
readme = "README.md"
repository = "https://github.com/aporia-ai/mlnotify"

[tool.poetry.dependencies]
python = "^3.6"
gorilla = "^0.4.0"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
flake8 = "^3.7.9"
flake8-import-order = "^0.18.1"
flake8-bugbear = {version = "^20.1.2", python = "^3.7"}
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.761"
flake8-annotations = {version = "^2.0.0", python = "^3.7"}
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
isort = ">=4.3.21,<6.0.0"
lightgbm = "^3.2.1"
xgboost = "^1.4.0"
tensorflow = "^2.4.1"
keras = "^2.4.3"
scikit-learn = "^0.24.1"
autopep8 = "^1.5.6"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
lexicographical = true
order_by_type = false
group_by_package = true
no_lines_before = ['LOCALFOLDER']
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
